--- a/module-1/lab-intro-pandas/your-code/main.ipynb
+++ b/module-1/lab-intro-pandas/your-code/main.ipynb
@@ -18,10 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +44,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     5.7\n",
+       "1    75.2\n",
+       "2    74.4\n",
+       "3    84.0\n",
+       "4    66.5\n",
+       "5    66.3\n",
+       "6    55.8\n",
+       "7    75.7\n",
+       "8    29.1\n",
+       "9    43.7\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pd.Series(lst)\n",
+    "s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,10 +84,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.4"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[2]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,10 +129,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>61.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>57.4</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>96.6</td>\n",
+       "      <td>73.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>95.0</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>67.5</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>53.4</td>\n",
+       "      <td>43.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>88.8</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>81.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>78.4</td>\n",
+       "      <td>87.6</td>\n",
+       "      <td>91.8</td>\n",
+       "      <td>69.5</td>\n",
+       "      <td>35.9</td>\n",
+       "      <td>89.1</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>68.5</td>\n",
+       "      <td>50.1</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1     2     3     4     5     6     7     8     9\n",
+       "0  53.1  61.3  20.6  57.4  83.6  49.0  23.3  27.6  96.6  73.7\n",
+       "1  95.0  40.8  73.2   0.1  20.5  69.0  40.7  26.4  96.4  39.0\n",
+       "2  67.5  30.8  44.2  96.1  85.4   0.1  95.0  53.8  53.4  43.2\n",
+       "3  35.0  37.8  14.6   4.2  22.8  31.8  83.8  88.8  72.4  81.6\n",
+       "4  78.4  87.6  91.8  69.5  35.9  89.1  26.9  68.5  50.1  34.7"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(b)\n",
+    "df = df.transpose()\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,19 +264,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']"
+    "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5','Score_6', 'Score_7', 'Score_8', 'Score_9', 'Score_10' ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_2</th>\n",
+       "      <th>Score_3</th>\n",
+       "      <th>Score_4</th>\n",
+       "      <th>Score_5</th>\n",
+       "      <th>Score_6</th>\n",
+       "      <th>Score_7</th>\n",
+       "      <th>Score_8</th>\n",
+       "      <th>Score_9</th>\n",
+       "      <th>Score_10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>61.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>57.4</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>96.6</td>\n",
+       "      <td>73.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>95.0</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>67.5</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>53.4</td>\n",
+       "      <td>43.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>88.8</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>81.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>78.4</td>\n",
+       "      <td>87.6</td>\n",
+       "      <td>91.8</td>\n",
+       "      <td>69.5</td>\n",
+       "      <td>35.9</td>\n",
+       "      <td>89.1</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>68.5</td>\n",
+       "      <td>50.1</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_2  Score_3  Score_4  Score_5  Score_6  Score_7  Score_8  \\\n",
+       "0     53.1     61.3     20.6     57.4     83.6     49.0     23.3     27.6   \n",
+       "1     95.0     40.8     73.2      0.1     20.5     69.0     40.7     26.4   \n",
+       "2     67.5     30.8     44.2     96.1     85.4      0.1     95.0     53.8   \n",
+       "3     35.0     37.8     14.6      4.2     22.8     31.8     83.8     88.8   \n",
+       "4     78.4     87.6     91.8     69.5     35.9     89.1     26.9     68.5   \n",
+       "\n",
+       "   Score_9  Score_10  \n",
+       "0     96.6      73.7  \n",
+       "1     96.4      39.0  \n",
+       "2     53.4      43.2  \n",
+       "3     72.4      81.6  \n",
+       "4     50.1      34.7  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns =  ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5','Score_6', 'Score_7', 'Score_8', 'Score_9', 'Score_10' ]\n",
+    "\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +415,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "de = df.iloc[:, [0,1,4]]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,10 +431,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[65.8]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " [df['Score_1'].mean()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +458,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[96.1]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[df['Score_4'].max()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +485,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.8"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Score_2'].median()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,10 +533,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LUNCH BAG APPLE DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>13.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RIBBON REEL STRIPES DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n",
+       "      <td>2880</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>518.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>POPCORN HOLDER</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>5.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>11.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PARTY BUNTING</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>19.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>JAZZ HEARTS ADDRESS BOOK</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>1.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>60.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Description  Quantity  UnitPrice  Revenue\n",
+       "0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+       "1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+       "2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+       "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+       "4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n",
+       "5                      POPCORN HOLDER         7       0.85     5.95\n",
+       "6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n",
+       "7                       PARTY BUNTING         4       4.95    19.80\n",
+       "8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n",
+       "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndf = pd.DataFrame.from_dict(orders)\n",
+    "ndf"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,16 +671,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2978"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndf['Quantity'].sum()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 12. Obtain the prices of the most expensive and least expensive items ordered and print the difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "516.75"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndf['Revenue'].max() - ndf['Revenue'].min()"
    ]
   },
   {
@@ -253,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
